[package]
name = "fibonacci-circuit"
version = "0.1.0"
edition = "2021"

default-run = "example1"

# multiple binary
[[bin]]
name = "example1"
path = "src/example1.rs"

[[bin]]
name = "f_example1"
path = "src/f_example1.rs"

[features]
dev-graph = ["halo2_proofs/dev-graph", "plotters"]

[dependencies]
halo2_proofs = { git = "https://github.com/zcash/halo2.git", rev = "a898d65ae3ad3d41987666f6a03cfc15edae01c4"}
plotters = { version = "0.3.0", optional = true }
tabbycat = { version = "0.1", features = ["attributes"], optional = true }